First pass of css done.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 	</head> 
 	<body>
 		<header>
-			<h1>HDC</h1>
-		</header>	
+			<h1><span>HDC</span></h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Schedule</a></li>
+				<li><a href="location.html">Location</a></li>
+				<li><a href="speakers.html">Speakers</a></li>
+			</ul>	
+		</nav>		
 		<section id="maincontent">
 		
 			<h2>Master Schedule</h2>
@@ -34,12 +41,12 @@
 						<p class="speaker">Matt Milner and Jeff Brand</p>
 					</article>
 					<article>
-						<h1><a href="../?page_id=336">Programming with Native Languages in the 21st Century w/</a></h1>
+						<h1><a href="../?page_id=336">Programming with Native Languages in the 21st Century</a></h1>
 						<p class="speaker">Michael Price</p>
 
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=536">Azure Pre-Conference Quickstart w/</a></h1>
+						<h1><a href="sessions?page_id=536">Azure Pre-Conference Quickstart</a></h1>
 						<p class="speaker">Mike Benkovich, Brent Stineman, Volker Schulz and Adam Grocholski</p>
 					</article>
 				</section>
@@ -80,7 +87,7 @@
 				<section class="slot">
 					<time>9AM</time>
 					<article class="fullslot keynote">
-						<h1><a href="sessions?page_id=414">Windows 8 and the Future of Client Development w/</a></h1>
+						<h1><a href="sessions?page_id=414">Windows 8 and the Future of Client Development</a></h1>
 						<p class="speaker">Pete Brown</p>
 					</article>
 				</section>
@@ -88,7 +95,7 @@
 				<section class="slot">
 					<time>10:15 AM</time>
 					<article>
-						<h1><a href="sessions?page_id=429">Learning From Mobile Gone Global w/</a></h1>
+						<h1><a href="sessions?page_id=429">Learning From Mobile Gone Global</a></h1>
 						<p class="speaker">Molly Holzschlag</p>
 					</article>
 					<article>
@@ -96,11 +103,11 @@
 						<p class="speaker">Kff Bramwell</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=422">HTML5 + Cloud: Reach Everyone, Everywhere (Condensed) w/</a></h1>
+						<h1><a href="sessions?page_id=422">HTML5 + Cloud: Reach Everyone, Everywhere (Condensed)</a></h1>
 						<p class="speaker">Eric Boyd</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=472">C++/CX and WinRT: Just Enough C++ To Get By On w/</a></h1>
+						<h1><a href="sessions?page_id=472">C++/CX and WinRT: Just Enough C++ To Get By On</a></h1>
 						<p class="speaker">Michael Price</p>
 					</article>
 				</section>
@@ -153,19 +160,19 @@
 				<section class="slot">
 					<time>2:15 PM</time>
 					<article>
-						<h1><a href="sessions?page_id=490">Simplify your WPF / Silverlight Applications with Caliburn.Micro w/</a></h1>
+						<h1><a href="sessions?page_id=490">Simplify your WPF / Silverlight Applications with Caliburn.Micro</a></h1>
 						<p class="speaker">Mike Eaton</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=442">What&#8217;s New in Android Development w/</a></h1>
+						<h1><a href="sessions?page_id=442">What&#8217;s New in Android Development</a></h1>
 						<p class="speaker">Donn Felker</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=480">Avoiding the Chaos Monkey w/</a></h1>
+						<h1><a href="sessions?page_id=480">Avoiding the Chaos Monkey</a></h1>
 						<p class="speaker">Brent Stineman</p>
 					</article>
 					<article>
-						<h1><a href="sessions2012/youre-a-designer-whether-you-like-it-or-not">You&#8217;re a Designer Whether You Like it or Not w/</a></h1>
+						<h1><a href="sessions2012/youre-a-designer-whether-you-like-it-or-not">You&#8217;re a Designer Whether You Like it or Not</a></h1>
 						<p class="speaker">Kyle Murphy</p>
 					</article>
 				</section>
@@ -173,19 +180,19 @@
 				<section class="slot">
 					<time>3:15 PM</time>
 					<article>
-						<h1><a href="sessions?page_id=449">Top Tips for Interface Design (by Designer for Developer) w/</a></h1>
+						<h1><a href="sessions?page_id=449">Top Tips for Interface Design (by Designer for Developer)</a></h1>
 						<p class="speaker">Drew Davies</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=446">Targeting Mobile Devices with HTML5 and CSS 3 w/</a></h1>
+						<h1><a href="sessions?page_id=446">Targeting Mobile Devices with HTML5 and CSS 3</a></h1>
 						<p class="speaker">Robert Boedigheimer</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=451">Using C1 Studio for Windows Phone Controls w/</a></h1>
+						<h1><a href="sessions?page_id=451">Using C1 Studio for Windows Phone Controls</a></h1>
 						<p class="speaker">Russ Fustino</p>
 					</article>
 					<article>
-						<h1><a href="sessions?page_id=439">Beyond IIS w/</a></h1>
+						<h1><a href="sessions?page_id=439">Beyond IIS</a></h1>
 						<p class="speaker">Matt Milner</p>
 					</article>
 				</section>
@@ -328,17 +335,16 @@
 		</section>
 
 
-
+		<nav>
+			<ul>
+				<li><a href="index.html">Schedule</a></li>
+				<li><a href="location.html">Location</a></li>
+				<li><a href="speakers.html">Speakers</a></li>
+			</ul>	
+		</nav>	
 		<footer>
 			<div>
 				<p id="copyright">Copyright © 2012 </p>
-				<nav>
-					<ul>
-						<li><a href="index.html">Schedule</a></li>
-						<li><a href="location.html">Location</a></li>
-						<li><a href="speakers.html">Speakers</a></li>
-					</ul>	
-				</nav>	
 			</div>	
 		</footer>
 
